New locations for training videos

--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Instructions.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Instructions.cshtml
@@ -32,22 +32,22 @@
         <ul>
             <li>
                 <div>
-                    <a href="http://youtu.be/2UfpZOgsWwA" target="_blank"><strong>1) Departmental Admin Power Point Presentation</strong></a>
+                    <a href="https://video.ucdavis.edu/media/1+DA+Power+Point/1_uqxmp1j1" target="_blank"><strong>1) Departmental Admin Power Point Presentation</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/Td_812wWgOA" target="_blank"><strong>2) Workgroup Tool</strong></a>
+                    <a href="https://video.ucdavis.edu/media/2+DA+Workgroup+Tool/1_mbj14vwe" target="_blank"><strong>2) Workgroup Tool</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/s1BwMkODalA" target="_blank"><strong>3) Organizations</strong></a>
+                    <a href="https://video.ucdavis.edu/media/3+DA+Organizations/1_0tiacvy1" target="_blank"><strong>3) Organizations</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/VITVL6UjndM" target="_blank"><strong>4) Create Workgroup</strong></a>
+                    <a href="https://video.ucdavis.edu/media/4+DA+Create+Workgroup/1_bu5ohfzw" target="_blank"><strong>4) Create Workgroup</strong></a>
                 </div>
             </li>
             <li>
