--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Instructions.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Instructions.cshtml
@@ -52,27 +52,27 @@
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/dU0QM1oOI40" target="_blank"><strong>5) Edit Workgroup</strong></a>
+                    <a href="https://video.ucdavis.edu/media/5+DA+Edit+Workgroup/1_a9x4wy0s" target="_blank"><strong>5) Edit Workgroup</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/_vvGpo3JPNQ" target="_blank"><strong>6) Create Orders</strong></a>
+                    <a href="https://video.ucdavis.edu/media/6+Create+Orders/1_v9j3jjrs" target="_blank"><strong>6) Create Orders</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/LgZA5y8oZcI" target="_blank"><strong>7) Approve and Deny Orders</strong></a>
+                    <a href="https://video.ucdavis.edu/media/7+Approve+Deny/1_gxic3dwp" target="_blank"><strong>7) Approve and Deny Orders</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/_LZEgxA6KUU" target="_blank"><strong>8) Preferences</strong></a>
+                    <a href="https://video.ucdavis.edu/media/8+Prefs/1_jogfof7j" target="_blank"><strong>8) Preferences</strong></a>
                 </div>
             </li>
             <li>
                 <div>
-                    <a href="http://youtu.be/29Q2bDZaaKQ" target="_blank"><strong>9) Help System</strong></a>
+                    <a href="https://video.ucdavis.edu/media/9+Help/1_xszaywz5" target="_blank"><strong>9) Help System</strong></a>
                 </div>
             </li>
         </ul> 
