WIP: remove all .Net Framework deps

--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 
 	<div class="wrapper">	
 
-    @Html.Action("ServiceMessages", "ServiceMessage")
+    @await Component.InvokeAsync("ServiceMessages")
 	
 		<header id="branding">
 			
