--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
 ﻿@using System.Configuration
-@using System.Web.Configuration
 @using Purchasing.Core.Domain
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration configuration
+
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
@@ -243,13 +245,13 @@
     <script type="text/javascript">
     (function (w) {
         var d = w['Configuration'] || (w['Configuration'] = {});
-        d.AnalyticsKey = '@WebConfigurationManager.AppSettings["AnalyticsKey"]';
+        d.AnalyticsKey = '@configuration.GetValue<string>("AnalyticsKey")';
         d.DataTablesPageSize = @(ViewBag.DataTablesPageSize ?? 10);
         d.LoadTableTools = @(ViewBag.LoadTableTools == null ? "false" : ViewBag.LoadTableTools.ToString().ToLower());
         d.DisableGlobalDataTables = @(ViewBag.DisableGlobalDataTables == null ? "false" : ViewBag.DisableGlobalDataTables.ToString().ToLower());
         d.TableToolsSwf = '@Url.Content("~/Content/DataTables-1.9.0/extras/TableTools/media/swf/copy_cvs_xls.swf")';
         d.LoadFixedHeaders = @(ViewBag.LoadFixedHeaders == null ? "false" : ViewBag.LoadFixedHeaders.ToString().ToLower());
-        d.PersonLookup = '@ConfigurationManager.AppSettings["PersonLookupUrl"]';
+        d.PersonLookup = '@configuration.GetValue<string>("PersonLookupUrl")';
     }(window));
     </script>
     
