--- a/Purchasing.Mvc/Views/Home/Landing.cshtml
+++ b/Purchasing.Mvc/Views/Home/Landing.cshtml
@@ -13,7 +13,7 @@
 
 @section AdditionalScripts{
     
-    @Scripts.Render("~/bundles/landing")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/landing")
 
     <script type="text/javascript">
         $(function () {
