--- a/Purchasing.Mvc/Views/Order/RerouteAccountManager.cshtml
+++ b/Purchasing.Mvc/Views/Order/RerouteAccountManager.cshtml
@@ -8,11 +8,11 @@
 }
 
 @section AdditionalStyles{
-    @Styles.Render("~/Css/single/chosen") 
+    @await Html.PartialAsync("_CssBundle", "~/Css/single/chosen") 
 }
 
 @section AdditionalScripts{
-    @Scripts.Render("~/bundles/single/chosen")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/single/chosen")
     <script type="text/javascript">
         $(document).ready(function () {
             $(".chzn-select").chosen({ no_results_text: "No results matched", search_contains: true });
