--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Create.cshtml
@@ -4,13 +4,13 @@
 	ViewBag.Title = "Create";
 }
 @section AdditionalStyles{
-    @Styles.Render("~/Css/multiselector")
+    @await Html.PartialAsync("_CssBundle", "~/Css/multiselector")
 }
 
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/multiselector")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/multiselector")
    
  
     <script type="text/javascript">
