--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Deny.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Deny.cshtml
@@ -6,12 +6,12 @@
 }
 
 @section AdditionalStyles{
-    @Styles.Render("~/Css/multiselector")
+    @await Html.PartialAsync("_CssBundle", "~/Css/multiselector")
 }
 
 @section AdditionalScripts{
     
-    @Scripts.Render("~/bundles/multiselector")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/multiselector")
  
     <script type="text/javascript">
 
