--- a/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
+++ b/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
@@ -18,15 +18,15 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/single/fileuploader/fileuploader")
-    @Styles.Render("~/Css/single/receive-payment")
+    @await Html.PartialAsync("_CssBundle", "~/Css/single/fileuploader/fileuploader")
+    @await Html.PartialAsync("_CssBundle", "~/Css/single/receive-payment")
 }
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/jqueryTmpl")
-    @Scripts.Render("~/bundles/fileuploader-js")
-    @Scripts.Render("~/bundles/single/payInvoice")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/jqueryTmpl")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/fileuploader-js")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/single/payInvoice")
 
     <script type="text/javascript">
 
