--- a/Purchasing.Mvc/Views/Order/Request.cshtml
+++ b/Purchasing.Mvc/Views/Order/Request.cshtml
@@ -7,7 +7,7 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/order")
+    @await Html.PartialAsync("_CssBundle", "~/Css/order")
 }
 
 @section AdditionalScripts{
@@ -26,7 +26,7 @@
 
     </script>
     
-    @Scripts.Render("~/bundles/order")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/order")
 }
 
 @Html.Partial("_SideNavigation")
