--- a/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/AddPeople.cshtml
@@ -2,12 +2,12 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/multiselector")
+    @await Html.PartialAsync("_CssBundle", "~/Css/multiselector")
 }
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/multiselector")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/multiselector")
     <script type="text/javascript">
 
         $(function () {
