--- a/Purchasing.Mvc/Views/Workgroup/Create.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Create.cshtml
@@ -6,7 +6,7 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/multiselector")
+    @await Html.PartialAsync("_CssBundle", "~/Css/multiselector")
 
     <style type="text/css">
         .selector {
@@ -28,7 +28,7 @@
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/multiselector")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/multiselector")
 	<script type="text/javascript">
 
 		$(function () {
