--- a/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Edit.cshtml
@@ -7,8 +7,8 @@
 
 @section AdditionalStyles
 {
-    @Styles.Render("~/Css/multiselector")
-    @Styles.Render("~/Css/single/chosen")
+    @await Html.PartialAsync("_CssBundle", "~/Css/multiselector")
+    @await Html.PartialAsync("_CssBundle", "~/Css/single/chosen")
 
 
     <style type="text/css">
@@ -31,9 +31,9 @@
 
 @section AdditionalScripts
 {
-    @Scripts.Render("~/bundles/multiselector")
-    @Scripts.Render("~/bundles/single/chosen")
-    @Scripts.Render("~/bundles/jquery-qtip")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/multiselector")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/single/chosen")
+    @await Html.PartialAsync("_JsBundle", "~/bundles/jquery-qtip")
 
     
 	<script type="text/javascript">
